Small correction of width of track-wrap

--- a/src/containers/LeadsTracker/LeadsTrackerTable/index.scss
+++ b/src/containers/LeadsTracker/LeadsTrackerTable/index.scss
@@ -104,7 +104,7 @@ $new_black: #3b4557;
     width: 89%;
 
     .track-wrap {
-      width: 102px;
+      width: 120px;
       display: flex !important;
       border: 1px solid #c8ccd2 !important;
       padding: 5px 7px 7px 12px;
